# Assignment_Nymble

PC_UART/: ToSend.txt  main.py
espc3_uart/: CMakeLists.txt  partitions.csv
espc3_uart/main/: CMakeLists.txt  main.c  main.h
espc3_uart/main/RTC/: rtc_hal.c  rtc_hal.h
espc3_uart/main/SPIFFS/: spiffs_conf.c  spiffs_conf.h  spiffs_hal.c  spiffs_hal.h  spiffs_mngr.c  spiffs_mngr.h
espc3_uart/main/TIMER/: timer_conf.c  timer_conf.h  timer_hal.c  timer_hal.h  timer_mngr.c  timer_mngr.h
espc3_uart/main/UART/: uart_conf.c  uart_conf.h  uart_hal.c  uart_hal.h  uart_mngr.c  uart_mngr.h
